added flurstuecke in presentation and fixed changeURL

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+small {
+    display: inline-block;
+}
+
 @media (max-width: 992px) {
     .map {
         height: calc(100vh - 301px);
