--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -705,4 +705,5 @@
     </mgl-map>
 </div>
 
-<power-flurstueck-search #flurstueckssearch></power-flurstueck-search>
+<power-flurstueck-search #flurstueckssearch
+                         (fskChange)="onFlurstueckChange()"></power-flurstueck-search>
