--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -8,7 +8,7 @@
             <h5 class="col-md-5 mb-0"
                 role="rowheader"><b>{{brzStrings.brz | hyphenate}}</b></h5>
             <h5 class="col-md-7 mb-0"
-                role="cell">{{feature.properties.brzname | umlautCorrection}} {{feature.properties.wnum}}
+                role="cell">{{feature.properties.wnum}}
             </h5>
         </div>
     </div>
