--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -122,8 +122,8 @@
                                 <span *ngIf="flurstueck.features[0]?.properties.zaehler"
                                       class="pl-0 pr-0">
                                     <small>–{{ flurstueck.features[0].properties.zaehler }}</small>
-                                    <small *ngIf="flurstueck.features[0]?.properties.nenner">
-                                        /{{ flurstueck.features[0].properties.nenner }}</small>
+                                    <small *ngIf="flurstueck.features[0]?.properties.nenner">/{{
+                                        flurstueck.features[0].properties.nenner }}</small>
                                 </span>
                             </span>
                         </span>
@@ -186,8 +186,8 @@
                                 <span *ngIf="flurstueck.features[0]?.properties.zaehler"
                                       class="pl-0 pr-0">
                                     <small>–{{ flurstueck.features[0].properties.zaehler }}</small>
-                                    <small *ngIf="flurstueck.features[0]?.properties.nenner">
-                                        /{{ flurstueck.features[0].properties.nenner }}</small>
+                                    <small *ngIf="flurstueck.features[0]?.properties.nenner">/{{
+                                        flurstueck.features[0].properties.nenner }}</small>
                                 </span>
                             </span>
                         </span>
